[package]
authors = ["johnf <johnfish218@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "app"
version = "0.1.0"

[dependencies]
cortex-m-rt = "0.6.10"
panic-halt = "0.2.0"
stmlib = { path = "stmlib" }

# this lets you use `cargo fix`!
[[bin]]
name = "app"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
